--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Whitespace</title>
     <link rel="icon" href="./assets/icons/mylabel.png">
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <!-- hedader -->
@@ -21,83 +22,84 @@
                 >
             </a>
             <nav class="header__menu">
-                <ul class="header__menu__list">
-                    <li class="header__menu__item dropdown">
-                            Products
-                            <svg width="10" height="6" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M0.5 1L5 5L9.5 1" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
-                            <div class="dropdown__content content">
-                                <a href="#" class="dropdown__link">
-                                    A
-                                </a> <br>
-                                <a href="#" class="dropdown__link">
-                                    B
-                                </a> <br>
-                                <a href="#" class="dropdown__link">
-                                    C
-                                </a> <br>
-                            </div>
+                <ul class="header__menu__list dropdown">
+                    <li class="header__menu__item dropdown__item">
+                            <a href="#" class="header__menu__link">
+                                Products
+                                <i class="fa fa-angle-down"></i>
+                            </a>
+                            <ul class="dropdown__submenu">
+                                <li class="dropdown__submenu__item">
+                                    <a href="#">A</a>
+                                </li>
+                                <li class="dropdown__submenu__item">
+                                    <a href="#">B</a>
+                                </li>
+                                <li class="dropdown__submenu__item">
+                                    <a href="#">C</a>
+                                </li>
+                            </ul>
                     </li>
-                    <li class="header__menu__item dropdown">
-                            Solutions
-                            <svg width="10" height="6" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M0.5 1L5 5L9.5 1" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
-                            <div class="dropdown__content content">
-                                <a href="#" class="dropdown__link">
-                                    A
-                                </a> <br>
-                                <a href="#" class="dropdown__link">
-                                    B
-                                </a> <br>
-                                <a href="#" class="dropdown__link">
-                                    C
-                                </a> <br>
-                            </div>
+                    <li class="header__menu__item dropdown__item">
+                            <a href="#" class="header__menu__link"></a>
+                                Solutions
+                                <i class="fa fa-angle-down"></i>
+                            </a>
+                            <ul class="dropdown__submenu">
+                                <li class="dropdown__submenu__item">
+                                    <a href="#">A</a>
+                                </li>
+                                <li class="dropdown__submenu__item">
+                                    <a href="#">B</a>
+                                </li>
+                                <li class="dropdown__submenu__item">
+                                    <a href="#">C</a>
+                                </li>
+                            </ul>
                     </li>
-                    <li class="header__menu__item dropdown">
-                            Resources
-                            <svg width="10" height="6" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M0.5 1L5 5L9.5 1" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
-                            <div class="dropdown__content content">
-                                <a href="#" class="dropdown__link">
-                                    A
-                                </a> <br>
-                                <a href="#" class="dropdown__link">
-                                    B
-                                </a> <br>
-                                <a href="#" class="dropdown__link">
-                                    C
-                                </a> <br>
-                            </div>
+                    <li class="header__menu__item dropdown__item">
+                            <a href="#" class="header__menu__link"></a>
+                                Resources
+                                <i class="fa fa-angle-down"></i>
+                            </a>
+                            <ul class="dropdown__submenu">
+                                <li class="dropdown__submenu__item">
+                                    <a href="#">A</a>
+                                </li>
+                                <li class="dropdown__submenu__item">
+                                    <a href="#">B</a>
+                                </li>
+                                <li class="dropdown__submenu__item">
+                                    <a href="#">C</a>
+                                </li>
+                            </ul>
                     </li>
-                    <li class="header__menu__item dropdown">
-                            Pricing
-                            <svg width="10" height="6" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M0.5 1L5 5L9.5 1" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
-                            <div class="dropdown__content content">
-                                <a href="#" class="dropdown__link">
-                                    A
-                                </a> <br>
-                                <a href="#" class="dropdown__link">
-                                    B
-                                </a> <br>
-                                <a href="#" class="dropdown__link">
-                                    C
-                                </a> <br>
-                        </div>
+                    <li class="header__menu__item dropdown__item">
+                            <a href="#" class="header__menu__link"></a>
+                                Pricing
+                                <i class="fa fa-angle-down"></i>
+                            </a>
+                            <ul class="dropdown__submenu">
+                                <li class="dropdown__submenu__item">
+                                    <a href="#">A</a>
+                                </li>
+                                <li class="dropdown__submenu__item">
+                                    <a href="#">B</a>
+                                </li>
+                                <li class="dropdown__submenu__item">
+                                    <a href="#">C</a>
+                                </li>
+                            </ul>
                     </li>
                 </ul>
             </nav>
-            <button class="header__btn btn  btn--yellow">
+            <div class="header__actions">
+                <button class="header__btn btn tablet-hidden btn--yellow">
                     <a href="#logInPage" class="header__btn__link">
                         Login
                     </a>
-            </button>
-            <button class="header__btn btn btn--arrowed">
+                </button>
+                <button class="header__btn btn tablet-hidden btn--arrowed">
                     <a href="#tryForFreePage" class="header__btn__link">
                         Try Whitepace free
                     </a>
@@ -105,8 +107,52 @@
                     <path d="M1 6H11" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M6 1L11 6L6 11" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
-            </button>
+                </button>
+                <!-- burger btn -->
+                <button 
+                class="header__btn__burger burger-btn desktop-hidden"
+                type="button"
+                onclick="mobileOverlay.showModal()"
+                ></button>
+            </div>
+            
         </div>
      </header>
+
+     <!-- модальное окно для бургер кнопки -->
+     <dialog class="mobile-overlay " id="mobileOverlay">
+        <!-- кнопка закрытия модального окна -->
+        <form class="mobile-overlay__close-btn-wrapper" method="dialog">
+            <button 
+            class="mobile-overlay__close-btn cross-btn"
+            type="submit"
+            ></button>
+        </form>
+        <!-- навигационное меню 1152 -->
+        <div class="mobile-overlay__body">
+            <ul class="mobile-overlay__list">
+                <li class="mobile-overlay__item">
+                    <a href="#" class="mobile-overlay_link">
+                        Products
+                    </a>
+                </li>
+                <li class="mobile-overlay__item">
+                    <a href="#" class="mobile-overlay_link">
+                        Solutions
+                    </a>
+                </li>
+                <li class="mobile-overlay__item">
+                    <a href="#" class="mobile-overlay_link">
+                        Resources
+                    </a>
+                </li>
+                <li class="mobile-overlay__item">
+                    <a href="#" class="mobile-overlay_link">
+                        Pricing
+                    </a>
+                </li>
+            </ul>
+        </div>
+     </dialog>
 </body>
 </html>
