1. Исправил z-index для dropdown чтобы корректно отображалось выпадающее меню 2. Сделал элементы подчеркивания для заголовков DOUBLE CONTENT 3. Добавил еще одну секцию CONTENT

--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
                         >
                     </div>
          </section>
-         <!-- CONTENT section -->
+         <!-- DOUBLE CONTENT section -->
          <section class="section container section--double">
             <div class="section__body">
                 <div class="content content--double">
                     <header class="content__header">
-                        <h2 class="content__title">
+                        <h2 class="content__title underline underline--large--1">
                             Project Management
                         </h2>
                         <p>
@@ -174,7 +174,7 @@
                 <!-- 2 элемент -->
                 <div class="content content--double--second">
                     <header class="content__header content__header--second">
-                        <h2 class="content__title content__title--second">
+                        <h2 class="content__title content__title--second underline underline--large--2">
                             Work together
                         </h2>
                         <p>
@@ -192,13 +192,42 @@
                     <img 
                     src="./assets/images/work-together.svg" 
                     alt="" 
-                    class="content__img content__img--second"
+                    class="content__img content__img--reverse"
                     width="583"
                     height="542"
                     >
                 </div>
             </div>
          </section>
+         <!-- CONTENT section -->
+          <section class="section container section--primary">
+            <div class="section__body">
+                <div class="content">
+                    <header class="content__header">
+                        <h2 class="content__title underline  underline--slim--large">
+                            Use as Extension
+                        </h2>
+                        <p>
+                            Use the web clipper extension, available on Chrome and Firefox, to save web pages or take screenshots as notes.
+                        </p>
+                        <a href="#" class="content__btn btn btn--arrowed"">
+                            Let’s Go
+                            <svg width="10" height="10" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1 6H11" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M6 1L11 6L6 11" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                        </a>
+                    </header>
+                    <img 
+                    src="./assets/images/content-2.jpg" 
+                    alt="" 
+                    class="content__img"
+                    width="686"
+                    height="479"
+                    >
+                </div>
+            </div>
+          </section>
       </main>
      <!-- модальное окно для бургер кнопки -->
      <dialog class="mobile-overlay " id="mobileOverlay">
