1. Добавил еще одну секцию CONTENT + сделал правки 2. Сделал элементы подчеркивания 3. Сверстал и стилизовал PLANS

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 </div>
             </div>
          </section>
-         <!-- CONTENT section -->
+         <!-- CONTENT_1 section -->
           <section class="section container section--primary">
             <div class="section__body">
                 <div class="content">
@@ -228,6 +228,165 @@
                 </div>
             </div>
           </section>
+          <!-- CONTENT_2 section -->
+           <section class="section container">
+            <div class="section__body">
+                <div class="content content--reversed">
+                        <header class="content__header">
+                            <h2 class="content__title underline underline--large--3">
+                                Customise it to your needs
+                            </h2>
+                            <p>
+                                Customise the app with plugins, custom themes and multiple text editors (Rich Text or Markdown). Or create your own scripts and plugins using the Extension API.
+                            </p>
+                            <a href="#" class="content__btn btn btn--arrowed"">
+                                Let’s Go
+                                <svg width="10" height="10" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1 6H11" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M6 1L11 6L6 11" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </a>
+                        </header>
+                        <img 
+                        src="./assets/images/content-3.jpg" 
+                        alt="" 
+                        class="content__img content__img--reverse"
+                        width="670"
+                        height="500"
+                        >
+                </div>
+            </div>
+           </section>
+           <!-- PLANS section -->
+            <section class="section container">
+                <div class="section__body">
+                    <div class="content content--plans">
+                        <header class="content__header content__header--plans">
+                            <h2 class="content__title underline underline--large--4">
+                                Choose Your Plan
+                            </h2>
+                            <p class="content--plans__description">
+                                Whether you want to get organized, keep your personal life on track, or boost workplace productivity, Evernote has the right plan for you.
+                            </p>
+                        </header>
+                        <div class="content--plans__wrapper">
+                            <div class="content--plans__card">
+                                <div class="content--plans__card__inner">
+                                    <p>
+                                        Free
+                                    </p>
+                                    <h4>
+                                        $0
+                                    </h4>
+                                    <p>
+                                        Capture ideas and find them quickly
+                                    </p>
+                                    <ul class="content--plans__list">
+                                        <li class="content--plans__item">
+                                            Sync unlimited devices
+                                        </li>
+                                        <li class="content--plans__item">
+                                            10 GB monthly uploads
+                                        </li>
+                                        <li class="content--plans__item">
+                                            200 MB max. note size
+                                        </li>
+                                        <li class="content--plans__item">
+                                            Customize Home dashboard and access extra widgets
+                                        </li>
+                                        <li class="content--plans__item">
+                                            Connect primary Google Calendar account
+                                        </li>
+                                        <li class="content--plans__item">
+                                            Add due dates, reminders, and notifications to your tasks
+                                        </li>
+                                    </ul>
+                                    <a href="#" class="btn content--plans__btn btn--transparent">
+                                        Get Started
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="content--plans__card content--plans__card--big">
+                                <div class="content--plans__card__inner">
+                                    <p>
+                                        Personal
+                                    </p>
+                                    <h4>
+                                        <span>$11.99</span>
+                                    </h4>
+                                    <p>
+                                        Keep home and family on track
+                                    </p>
+                                    <ul class="content--plans__list">
+                                        <li class="content--plans__item content--plans__item--yellow">
+                                            Sync unlimited devices
+                                        </li>
+                                        <li class="content--plans__item
+                                        content--plans__item--yellow">
+                                            10 GB monthly uploads
+                                        </li>
+                                        <li class="content--plans__item
+                                        content--plans__item--yellow">
+                                            200 MB max. note size
+                                        </li>
+                                        <li class="content--plans__item
+                                        content--plans__item--yellow">
+                                            Customize Home dashboard and access extra widgets
+                                        </li>
+                                        <li class="content--plans__item
+                                        content--plans__item--yellow">
+                                            Connect primary Google Calendar account
+                                        </li>
+                                        <li class="content--plans__item
+                                        content--plans__item--yellow">
+                                            Add due dates, reminders, and notifications to your tasks
+                                        </li>
+                                    </ul>
+                                    <a href="#" class="btn content--plans__btn">
+                                        Get Started
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="content--plans__card">
+                                <div class="content--plans__card__inner">
+                                    <p>
+                                        Organization
+                                    </p>
+                                    <h4>
+                                        $49.99
+                                    </h4>
+                                    <p>
+                                        Capture ideas and find them quickly
+                                    </p>
+                                    <ul class="content--plans__list">
+                                        <li class="content--plans__item">
+                                            Sync unlimited devices
+                                        </li>
+                                        <li class="content--plans__item">
+                                            10 GB monthly uploads
+                                        </li>
+                                        <li class="content--plans__item">
+                                            200 MB max. note size
+                                        </li>
+                                        <li class="content--plans__item">
+                                            Customize Home dashboard and access extra widgets
+                                        </li>
+                                        <li class="content--plans__item">
+                                            Connect primary Google Calendar account
+                                        </li>
+                                        <li class="content--plans__item">
+                                            Add due dates, reminders, and notifications to your tasks
+                                        </li>
+                                    </ul>
+                                    <a href="#" class="btn content--plans__btn btn--transparent">
+                                        Get Started
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
       </main>
      <!-- модальное окно для бургер кнопки -->
      <dialog class="mobile-overlay " id="mobileOverlay">
