1. Сделал pagination для PLANS 2. Сверстал, стилизовал и адаптировал: - YOUR WORK - YOUR DATA - SPONSORS - APPS - TESTIMONIALS 3. Остался footer

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
      <!-- main -->
       <main class="main">
         <!-- HERO section -->
-         <section class="section container section--primary section--waved">
+        <section class="section container section--primary section--waved">
                 <div class="section__body">
                     <div class="hero">
                         <header class="hero__header">
@@ -143,9 +143,9 @@
                         height="456"
                         >
                     </div>
-         </section>
-         <!-- DOUBLE CONTENT section -->
-         <section class="section container section--double">
+        </section>
+        <!-- DOUBLE CONTENT section -->
+        <section class="section container section--double">
             <div class="section__body">
                 <div class="content content--double">
                     <header class="content__header">
@@ -198,9 +198,9 @@
                     >
                 </div>
             </div>
-         </section>
-         <!-- CONTENT_1 section -->
-          <section class="section container section--primary">
+        </section>
+        <!-- EXTENSION--CONTENT section -->
+        <section class="section container section--primary">
             <div class="section__body">
                 <div class="content">
                     <header class="content__header">
@@ -227,12 +227,12 @@
                     >
                 </div>
             </div>
-          </section>
-          <!-- CONTENT_2 section -->
-           <section class="section container">
+        </section>
+        <!-- CUSTOMISE--CONTENT section -->
+        <section class="section container">
             <div class="section__body">
                 <div class="content content--reversed">
-                        <header class="content__header">
+                        <header class="content__header content__header--reversed"">
                             <h2 class="content__title underline underline--large--3">
                                 Customise it to your needs
                             </h2>
@@ -250,15 +250,15 @@
                         <img 
                         src="./assets/images/content-3.jpg" 
                         alt="" 
-                        class="content__img content__img--reverse"
+                        class="content__img content__img--reverse content__img--reverse--2"
                         width="670"
                         height="500"
                         >
                 </div>
             </div>
-           </section>
-           <!-- PLANS section -->
-            <section class="section container">
+        </section>
+        <!-- PLANS section -->
+        <section class="section container">
                 <div class="section__body">
                     <div class="content plans">
                         <header class="content__header plans__header">
@@ -484,8 +484,248 @@
                         </div>
                     </div>
                 </div>
-            </section>
+        </section>
+        <!-- YOUR-WORK section -->
+        <section class="section container section--primary section--blue--waved">
+                <div class="section__body">
+                    <div class="content plans">
+                        <header class="content__header plans__header plans__header--blue--waved ">
+                            <h2 class="content__title underline underline--large--slim--BLUE">
+                                Your work, everywhere you are
+                            </h2>
+                            <p class="plans__description">
+                                Access your notes from your computer, phone or tablet by synchronising with various services, including whitepace, Dropbox and OneDrive. The app is available on Windows, macOS, Linux, Android and iOS. A terminal app is also available!
+                            </p>
+                            <a href="#" class="content__btn btn btn--arrowed"">
+                                Try Taskey
+                                <svg width="10" height="10" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1 6H11" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M6 1L11 6L6 11" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </a>
+                        </header>
+                    </div>
+                </div>
+        </section>
+        <!-- YOUR-DATA section -->
+        <section class="section container">
+                <div class="section__body">
+                    <div class="content">
+                        <header class="content__header content__header--reversed">
+                            <h2 class="content__title underline underline--large--5">
+                                100% your data
+                            </h2>
+                            <p>
+                                The app is open source and your notes are saved to an open format, so you'll always have access to them. Uses End-To-End Encryption (E2EE) to secure your notes and ensure no-one but yourself can access them.
+                            </p>
+                            <a href="#" class="content__btn btn btn--arrowed"">
+                                Read more
+                                <svg width="10" height="10" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1 6H11" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M6 1L11 6L6 11" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </a>
+                        </header>
+                        <img 
+                        src="./assets/images/your-data.png" 
+                        alt="" 
+                        class="content__img content__img--reverse--2"
+                        width="681"
+                        height="381"
+                        >
+                    </div>
+                </div>
+        </section>
+        <!-- SPONSORS section -->
+        <section class="section container">
+                <div class="section__body">
+                    <div class="content plans sponsors">
+                        <header class="content__header plans__header sponsors__header">
+                            <h2 class="content__title underline underline--large--6">
+                                Our sponsors
+                            </h2>
+                        </header>
+                        <ul class="sponsors__list">
+                            <li class="sponsors__item">
+                                <img src="./assets/images/Apple.png"
+                                alt="" 
+                                class="sponsors__img"
+                                width="56"
+                                height="68"
+                                >
+                            </li>
+                            <li class="sponsors__item">
+                                <img src="./assets/images/Microsoft.png"
+                                alt="" 
+                                class="sponsors__img"
+                                width="287"
+                                height="62"
+                                >
+                            </li>
+                            <li class="sponsors__item">
+                                <img src="./assets/images/Slack.png"
+                                alt="" 
+                                class="sponsors__img"
+                                width="280"
+                                height="71"
+                                >
+                            </li>
+                            <li class="sponsors__item">
+                                <img src="./assets/images/Google.png"
+                                alt="" 
+                                class="sponsors__img"
+                                width="211"
+                                height="70"
+                                >
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+        </section>
+        <!-- APPS section -->
+        <section class="section container section--primary section--waved--APPS">
+                    <div class="section__body">
+                        <div class="content">
+                            <header class="content__header content__header--reversed">
+                                <h2 class="content__title">
+                                    Work with Your Favorite Apps Using whitepace
+                                </h2>
+                                <p>
+                                    Whitepace teams up with your favorite software. Integrate with over 1000+ apps with Zapier to have all the tools you need for your project success.
+                                </p>
+                                <a href="#" class="content__btn btn btn--arrowed"">
+                                    Read more
+                                    <svg width="10" height="10" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 6H11" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M6 1L11 6L6 11" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </a>
+                            </header>
+                            <img 
+                            src="./assets/images/Apps.png" 
+                            alt="" 
+                            class="content__img content__img--reverse"
+                            width="582"
+                            height="470"
+                            >
+                        </div>
+                    </div>
+        </section>
+        <!-- TESTIMONIALS section -->
+        <section class="section container">
+                    <div class="section__body">
+                        <div class="content plans testimonials">
+                            <header class="content__header plans__header">
+                                <h2 class="content__title underline underline--small">
+                                    What Our Clients Says
+                                </h2>
+                            </header>
+                            <div class="testimonials__wrapper">
+                                <div class="testimonials__card testimonials__card--white">
+                                    <div class="testimonials__inner">
+                                        <div class="testimonials__comment testimonials__comment--white">
+                                            <svg width="87" height="62" viewBox="0 0 87 62" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M86.3333 13.0668L83.5744 0.380859C63.709 1.29088 49.9385 9.55621 49.9385 33.8629V61.8411H84.6439V26.6767H71.5001C71.5003 18.8774 76.3938 14.2902 86.3333 13.0668Z" fill="white"/>
+                                                <path d="M36.7282 13.0671L33.9693 0.381104C14.1039 1.29113 0.333374 9.55668 0.333374 33.8634V61.8416H35.0402V26.6769H21.8882C21.8882 18.8777 26.7817 14.2904 36.7282 13.0671Z" fill="white"/>
+                                            </svg>
+                                            <p>
+                                                Whitepate is designed as a collaboration tool for businesses that is a full project management solution.
+                                            </p>
+                                        </div>
+                                        <div class="testimonials__name">
+                                            <img src="./assets/images/avatar_1.png" alt="" class="testimonials__img">
+                                            <div class="testimonials__info">
+                                                <p class="testimonials__title">
+                                                    <span>Oberon Shaw, MCH</span>
+                                                </p>
+                                                <p class="testimonials__job">
+                                                    Head of Talent Acquisition, North America
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="testimonials__card">
+                                    <div class="testimonials__inner">
+                                        <div class="testimonials__comment">
+                                            <svg width="87" height="62" viewBox="0 0 87 62" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M86.3333 13.0668L83.5744 0.380859C63.709 1.29088 49.9385 9.55621 49.9385 33.8629V61.8411H84.6439V26.6767H71.5001C71.5003 18.8774 76.3938 14.2902 86.3333 13.0668Z" fill="white"/>
+                                                <path d="M36.7282 13.0671L33.9693 0.381104C14.1039 1.29113 0.333374 9.55668 0.333374 33.8634V61.8416H35.0402V26.6769H21.8882C21.8882 18.8777 26.7817 14.2904 36.7282 13.0671Z" fill="white"/>
+                                            </svg>
+                                            <p>
+                                                Whitepate is designed as a collaboration tool for businesses that is a full project management solution.
+                                            </p>
+                                        </div>
+                                        <div class="testimonials__name">
+                                            <img src="./assets/images/avatar_2.png" alt="" class="testimonials__img">
+                                            <div class="testimonials__info">
+                                                <p class="testimonials__title">
+                                                    <span>Oberon Shaw, MCH</span>
+                                                </p>
+                                                <p class="testimonials__job">
+                                                    Head of Talent Acquisition, North America
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="testimonials__card">
+                                    <div class="testimonials__inner">
+                                        <div class="testimonials__comment">
+                                            <svg width="87" height="62" viewBox="0 0 87 62" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M86.3333 13.0668L83.5744 0.380859C63.709 1.29088 49.9385 9.55621 49.9385 33.8629V61.8411H84.6439V26.6767H71.5001C71.5003 18.8774 76.3938 14.2902 86.3333 13.0668Z" fill="white"/>
+                                                <path d="M36.7282 13.0671L33.9693 0.381104C14.1039 1.29113 0.333374 9.55668 0.333374 33.8634V61.8416H35.0402V26.6769H21.8882C21.8882 18.8777 26.7817 14.2904 36.7282 13.0671Z" fill="white"/>
+                                            </svg>
+                                            <p>
+                                                Whitepate is designed as a collaboration tool for businesses that is a full project management solution.
+                                            </p>
+                                        </div>
+                                        <div class="testimonials__name">
+                                            <img src="./assets/images/avatar_3.png" alt="" class="testimonials__img">
+                                            <div class="testimonials__info">
+                                                <p class="testimonials__title">
+                                                    <span>Oberon Shaw, MCH</span>
+                                                </p>
+                                                <p class="testimonials__job">
+                                                    Head of Talent Acquisition, North America
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- pagination -->
+                            <div class="plans__actions">
+                                <ul class="plans__pagination pagination">
+                                    <li class="pagination__item">
+                                        <button class="pagination__btn">
+                                            <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <circle cx="6" cy="6.02051" r="6" fill="#043873"/>
+                                            </svg>
+                                        </button>
+                                    </li>
+                                    <li class="pagination__item">
+                                        <button class="pagination__btn pagination__btn--primary">
+                                            <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <circle cx="6" cy="6.02051" r="6" fill="#043873"/>
+                                            </svg>
+                                        </button>
+                                    </li>
+                                    <li class="pagination__item">
+                                        <button class="pagination__btn">
+                                            <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <circle cx="6" cy="6.02051" r="6" fill="#043873"/>
+                                            </svg>
+                                        </button>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+        </section>
       </main>
+      <!-- FOOTER -->
+      
      <!-- модальное окно для бургер кнопки -->
      <dialog class="mobile-overlay " id="mobileOverlay">
         <!-- кнопка закрытия модального окна -->
